@@ -108,7 +108,8 @@ public class Launch {
 
                     // Ensure we allow the tweak class to load with the parent classloader
                     classLoader.addClassLoaderExclusion(tweakName.substring(0,tweakName.lastIndexOf('.')));
-                    final ITweaker tweaker = (ITweaker) Class.forName(tweakName, true, classLoader).newInstance();
+                    final ITweaker tweaker = (ITweaker) Class.forName(tweakName, true, classLoader)
+                            .getConstructor().newInstance();
                     tweakers.add(tweaker);
 
                     // Remove the tweaker from the list of tweaker names we've processed this pass
